--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>xfut - Login</title>
+  <title>Xfut - Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="login-container" class="center-box">
-    <h2>Login xfut</h2>
+    <h2>Login Xfut</h2>
     <input type="text" id="username" placeholder="Usuário">
     <input type="password" id="password" placeholder="Senha">
     <button onclick="login()">Entrar</button>
@@ -15,7 +15,7 @@
   </div>
 
   <div id="main-container" class="center-box" style="display: none;">
-    <h2>Lista de Jogos</h2>
+    <h2>Lista de Jogos do Xfut</h2>
     <div id="games-list"></div>
     <button onclick="logout()" class="logout-btn">Sair</button>
   </div>
