--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 
   <div id="main-container" class="center-box" style="display: none;">
     <h2>Lista de Jogos do Xfut</h2>
-    <div id="games-list"></div>
-    <button onclick="logout()" class="logout-btn">Sair</button>
+<div id="games-list"></div>
+<p id="games-info" style="margin-top: 16px;">
+  Temos jogos da Seleção Brasileira feminina e masculina, finais de campeonatos nacionais e internacionais, além de partidas da Copa do Brasil, da Libertadores e da Sul-Americana com os times brasileiros. E, é claro, o Brasileirão Série A não poderia ficar de fora!
+</p>
+<button onclick="logout()" class="logout-btn">Sair</button>
   </div>
 
   <script src="script.js"></script>
