--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
   <div id="login-container" class="center-box">
+    <div id="user-notification" class="user-notification">
+  <span>Estamos sempre trabalhando para melhorar seu uso</span>
+  <button class="close-notification" onclick="closeNotification()">×</button>
+</div>
     <div id="login-notice" class="login-notice">
   Assista aos jogos mais importantes, como a final da Champions, por apenas <b>R$5,90/mês!</b> Futebol pra você e pra todo mundo!
 </div>
