--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <div id="main-container" class="center-box" style="display: none;">
     <h2>Lista de Jogos do Xfut</h2>
+    <input type="text" id="search-input" placeholder="Pesquisar jogos..." oninput="handleSearch()" style="width: 100%; margin-bottom: 16px; padding: 8px; border-radius: 6px; border: none;">
 <div id="games-list"></div>
 <p id="games-info" style="margin-top: 16px;">
   Temos jogos da Seleção Brasileira feminina e masculina, finais de campeonatos nacionais e internacionais, além de partidas da Copa do Brasil, da Libertadores e da Sul-Americana com os times brasileiros. E, é claro, o Brasileirão Série A não poderia ficar de fora!
