--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
 
   <div id="main-container" class="center-box" style="display: none;">
     <h2>Lista de Jogos do Xfut</h2>
-    <input type="text" id="search-input" placeholder="Pesquisar jogos..." oninput="handleSearch()" style="width: 100%; margin-bottom: 16px; padding: 8px; border-radius: 6px; border: none;">
+    <div style="display: flex; gap: 8px; margin-bottom: 16px;">
+  <input 
+    type="text" 
+    id="search-input" 
+    placeholder="Pesquisar jogos..." 
+    oninput="handleSearch()" 
+    onkeydown="if(event.key === 'Enter'){ handleSearch(); }"
+    style="flex: 1; padding: 8px; border-radius: 6px; border: none;"
+  >
+  <button onclick="handleSearch()" id="search-btn" style="padding: 8px 16px; border-radius: 6px; background: #0cd361; color: #222; border: none; font-weight: bold; cursor: pointer;">
+    Pesquisar
+  </button>
+</div>
 <div id="games-list"></div>
 <p id="games-info" style="margin-top: 16px;">
   Temos jogos da Seleção Brasileira feminina e masculina, finais de campeonatos nacionais e internacionais, além de partidas da Copa do Brasil, da Libertadores e da Sul-Americana com os times brasileiros. E, é claro, o Brasileirão Série A não poderia ficar de fora!
