--- a/index.html
+++ b/index.html
@@ -44,5 +44,21 @@
   </div>
 
   <script src="script.js"></script>
+  <div id="notificacao-jogo" style="
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background: #292929;
+    color: #fff;
+    padding: 16px 24px;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    z-index: 9999;
+    display: none;
+    max-width: 320px;
+">
+    Ao clicar na opção, você será direcionado para o jogo. <br>
+    Porém, tudo o que abrir ao clicar na aba do jogo deve ser fechado, pois são apenas propagandas.
+</div>
 </body>
 </html>
