--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     z-index: 9999;
     max-width: 320px;
 ">
-    Ao clicar na opção, você será direcionado para o jogo. <br>
+    Ao clicar na opção de streaming (1) ou (2), você será direcionado para o jogo. <br>
     Porém, tudo o que abrir ao clicar na aba do jogo deve ser fechado, pois são apenas propagandas.
 </div>
 </body>
