--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="login-container" class="center-box">
     <div id="user-notification" class="user-notification">
-  <span>Estamos sempre trabalhando para melhorar seu uso</span>
+  <span>Estamos Sempre Trabalhando Para Melhorar Seu Uso.</span>
   <button class="close-notification" onclick="closeNotification()">×</button>
 </div>
     <div id="login-notice" class="login-notice">
