--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 <div id="games-list"></div>
 <p id="games-info" style="margin-top: 16px;">
-  Temos jogos da Seleção Brasileira feminina e masculina, finais de campeonatos nacionais e internacionais, além de partidas da Copa do Brasil, da Libertadores e da Sul-Americana com os times brasileiros. E, é claro, o Brasileirão Série A não poderia ficar de fora!
+  Temos jogos da Seleção Brasileira Feminina e Masculina, Finais de Campeonatos Nacionais e Internacionais, além de partidas da Copa do Brasil, da Libertadores e da Sul-Americana dos Times Brasileiros. E, é claro, o Brasileirão Série A que não poderia ficar de fora!
 </p>
 <button onclick="logout()" class="logout-btn">Sair</button>
   </div>
