--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="login-container" class="center-box">
     <div id="user-notification" class="user-notification">
-      <span>Informamos que no dia 02/06, nosso site passará por atualizações para melhorias e manutenção. Durante esse período, o acesso poderá ficar temporariamente indisponível.</span>
+      <span>Informamos que na manhã do dia 02/06, nosso site passará por atualizações para melhorias e manutenção. Durante esse período, o acesso poderá ficar temporariamente indisponível.</span>
       <button class="close-notification" onclick="closeNotification()">×</button>
     </div>
     <div id="login-notice" class="login-notice">
