--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="login-container" class="center-box">
     <div id="user-notification" class="user-notification">
-      <span>Gostou do novo visual???</span>
+      <span>Temos uma programação imperdível! Jogos da Seleção Brasileira Feminina e Masculina, finais de campeonatos nacionais e internacionais, além das partidas decisivas da Copa do Brasil, Libertadores e Sul-Americana com os times brasileiros em campo. E, é claro, não poderiam faltar os emocionantes confrontos do Brasileirão!</span>
       <button class="close-notification" onclick="closeNotification()">×</button>
     </div>
     <div id="login-notice" class="login-notice">
@@ -37,10 +37,7 @@
       </button>
     </div>
     <div id="games-list"></div>
-    <p id="games-info" style="margin-top: 16px;">
-      Temos jogos da Seleção Brasileira Feminina e Masculina, Finais de Campeonatos Nacionais e Internacionais, além de partidas da Copa do Brasil, da Libertadores e da Sul-Americana dos Times Brasileiros!
-    </p>
-    <button onclick="logout()" class="logout-btn">Sair</button>
+  <button onclick="logout()" class="logout-btn">Sair</button>
   </div>
   <script src="script.js"></script>
   <div id="notificacao-jogo" style="
