--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="login-container" class="center-box">
     <div id="user-notification" class="user-notification">
-      <span>Temos uma programação imperdível! Jogos da Seleção Brasileira Feminina e Masculina, finais de campeonatos nacionais e internacionais, além das partidas decisivas da Copa do Brasil, Libertadores e Sul-Americana com os times brasileiros em campo. E, é claro, não poderiam faltar os emocionantes confrontos do Brasileirão!</span>
+      <span>Temos uma programação imperdível! Jogos da Seleção Brasileira Feminina e Masculina, finais de campeonatos nacionais e internacionais, além das partidas decisivas da Copa do Brasil, Libertadores e muito mais!</span>
       <button class="close-notification" onclick="closeNotification()">×</button>
     </div>
     <div id="login-notice" class="login-notice">
@@ -23,42 +23,30 @@
   </div>
   <div id="main-container" class="center-box" style="display: none;">
     <h2>Lista de Jogos do Xfut</h2>
-    <div style="display: flex; gap: 8px; margin-bottom: 16px;">
+    <div class="search-area">
       <input 
         type="text" 
         id="search-input" 
         placeholder="Pesquisar jogos..." 
         oninput="handleSearch()" 
         onkeydown="if(event.key === 'Enter'){ handleSearch(); }"
-        style="flex: 1; padding: 8px; border-radius: 6px; border: none;"
       >
-      <button onclick="handleSearch()" id="search-btn" style="padding: 8px 16px; border-radius: 6px; background: #0cd361; color: #222; border: none; font-weight: bold; cursor: pointer;">
+      <button onclick="handleSearch()" id="search-btn">
         Pesquisar
       </button>
     </div>
     <div id="games-list"></div>
-  <button onclick="logout()" class="logout-btn">Sair</button>
+    <button onclick="logout()" class="logout-btn">Sair</button>
   </div>
   <script src="script.js"></script>
-  <div id="notificacao-jogo" style="
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: #292929;
-      color: #fff;
-      padding: 16px 24px;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      z-index: 9999;
-      max-width: 320px;
-  ">
-      Ao clicar na opção de streaming (1) ou (2), você será direcionado para o jogo. <br>
-      Porém, tudo o que abrir ao clicar na aba do jogo deve ser fechado, pois são apenas propagandas.
+  <div id="notificacao-jogo" class="notificacao-jogo">
+    Ao clicar na opção de streaming (1) ou (2), você será direcionado para o jogo. <br>
+    Porém, tudo o que abrir ao clicar na aba do jogo deve ser fechado, pois são apenas propagandas.
   </div>
-<footer class="rodape-moderno">
-  Assine o plano pelo número <a href="https://wa.me/5514991595957" target="_blank">(14) 99159-5957</a>
-  ou pelo Instagram <a href="https://instagram.com/avante.palmeirasx" target="_blank">@avante.palmeirasx</a>.
-  Todos os direitos reservados © Xfut 2025.
-</footer>
+  <footer class="rodape-moderno">
+    Assine o plano pelo número <a href="https://wa.me/5514991595957" target="_blank">(14) 99159-5957</a>
+    ou pelo Instagram <a href="https://instagram.com/avante.palmeirasx" target="_blank">@avante.palmeirasx</a>.
+    Todos os direitos reservados © Xfut 2025.
+  </footer>
 </body>
 </html>
