--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     Porém, tudo o que abrir ao clicar na aba do jogo deve ser fechado, pois são apenas propagandas.
   </div>
   <footer class="rodape-moderno">
-    Assine o plano pelo número <a href="https://wa.me/5514991595957" target="_blank">(14) 99159-5957</a>
+    Assine o plano pelo Whatsapp <a href="https://wa.me/5514991595957" target="_blank">(14) 99159-5957</a>
     ou pelo Instagram <a href="https://instagram.com/avante.palmeirasx" target="_blank">@avante.palmeirasx</a>.
     Todos os direitos reservados © Xfut 2025.
   </footer>
