--- a/index.html
+++ b/index.html
@@ -48,5 +48,11 @@
     ou pelo Instagram <a href="https://instagram.com/avante.palmeirasx" target="_blank">@avante.palmeirasx</a>.
     Todos os direitos reservados © Xfut 2025.
   </footer>
+  <div id="user-notification" style="display:none;">
+  <div class="notification-content">
+    <span id="notification-message"></span>
+    <button id="close-notification" onclick="closeNotification()">X</button>
+  </div>
+</div>
 </body>
 </html>
