--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     ou pelo Instagram <a href="https://instagram.com/avante.palmeirasx" target="_blank">@avante.palmeirasx</a>.
     Todos os direitos reservados © Xfut 2025.
   </footer>
-  <!-- Apenas UM bloco central de notificação personalizada -->
+  <!-- Notificação personalizada central (apenas uma!) -->
   <div id="user-notification" style="display:none;">
     <div class="notification-content">
       <span id="notification-message"></span>
