--- a/index.html
+++ b/index.html
@@ -1,59 +1,66 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Xfut</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>xfut - Jogos</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .lateral-msg {
+      position: fixed;
+      top: 60px;
+      right: 16px;
+      max-width: 340px;
+      z-index: 2000;
+      background: #29292b;
+      color: #ffd700;
+      padding: 14px 12px;
+      border-radius: 10px;
+      font-size: 1.03em;
+      box-shadow: 0 2px 10px #0004;
+      border: 1.5px solid #ffd70044;
+      text-align: left;
+    }
+    @media (max-width: 900px) {
+      .lateral-msg {
+        position: static;
+        margin: 18px auto 0 auto;
+        display: block;
+      }
+    }
+  </style>
 </head>
 <body>
-  <div id="login-container" class="center-box">
-    <div class="user-notification">
-      Temos uma programação imperdível! Jogos da Seleção Brasileira Feminina e Masculina, finais de campeonatos nacionais e internacionais, além das partidas decisivas da Copa do Brasil.
-      <button class="close-notification" onclick="this.parentElement.style.display='none';">×</button>
+  <!-- Conteúdo principal da página de jogos -->
+  <div class="center-box">
+    <h2>xfut - Jogos Disponíveis</h2>
+    <!-- Lista de jogos aqui -->
+    <div class="game-block">
+      <h3>Final da Champions League</h3>
+      <div class="opcoes">
+        <a class="opcao-link" href="#">Streaming 1</a>
+        <a class="opcao-link" href="#">Streaming 2</a>
+      </div>
     </div>
-    <div id="login-notice" class="login-notice">
-      Assista aos jogos mais importantes, como a final da Champions, por apenas <b>R$5,90/mês!</b> Futebol pra você e pra todo mundo!
-    </div>
-    <h2>Login Xfut</h2>
-    <input type="text" id="username" placeholder="Usuário" autocomplete="username">
-    <input type="password" id="password" placeholder="Senha" autocomplete="current-password">
-    <button onclick="login()">Entrar</button>
-    <p id="login-msg" class="error"></p>
+    <!-- Outros jogos ... -->
   </div>
-  <div id="main-container" class="center-box" style="display: none;">
-    <h2>Lista de Jogos do Xfut</h2>
-    <div class="search-area">
-      <input 
-        type="text" 
-        id="search-input" 
-        placeholder="Pesquisar jogos..." 
-        oninput="handleSearch()" 
-        onkeydown="if(event.key === 'Enter'){ handleSearch(); }"
-      >
-      <button onclick="handleSearch()" id="search-btn">
-        Pesquisar
-      </button>
-    </div>
-    <div id="games-list"></div>
-    <button onclick="logout()" class="logout-btn">Sair</button>
-  </div>
-  <script src="script.js"></script>
-  <div id="notificacao-jogo" class="notificacao-jogo">
-    Ao clicar na opção de streaming (1) ou (2), você será direcionado para o jogo. <br>
+
+  <!-- Mensagem lateral direita -->
+  <div class="lateral-msg">
+    Ao clicar na opção de streaming (1) ou (2), você será direcionado para o jogo.<br>
     Porém, tudo o que abrir ao clicar na aba do jogo deve ser fechado, pois são apenas propagandas.
   </div>
-  <footer class="rodape-moderno">
-    Assine o plano pelo Whatsapp <a href="https://wa.me/5514991595957" target="_blank">(14) 99159-5957</a>
-    ou pelo Instagram <a href="https://instagram.com/avante.palmeirasx" target="_blank">@avante.palmeirasx</a>.
-    Todos os direitos reservados © Xfut 2025.
-  </footer>
-  <!-- Notificação personalizada central (apenas uma!) -->
-  <div id="user-notification" style="display:none;">
-    <div class="notification-content">
-      <span id="notification-message"></span>
-      <button id="close-notification" onclick="closeNotification()">X</button>
-    </div>
-  </div>
+
+  <script>
+    // Fechar propagandas ao abrir abas - exemplo de controle, personalize conforme seu fluxo
+    document.querySelectorAll('.opcao-link').forEach(el => {
+      el.addEventListener('click', function(e) {
+        // Adapte este controle ao seu sistema real
+        setTimeout(() => {
+          // Aqui você pode colocar lógica para fechar popups ou alertar o usuário
+          alert('Feche todas as abas/janelas extras, pois são propagandas!');
+        }, 3500);
+      });
+    });
+  </script>
 </body>
 </html>
