--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <button class="close-notification" onclick="closeNotification()">×</button>
     </div>
     <div id="login-notice" class="login-notice">
-      Assista aos jogos mais importantes, como a final da Champions, por apenas <b>R$5,90/mês!</b> Futebol pra você e pra todo mundo!
+      Assista aos jogos mais importantes, como o Super Mundial de Clubes, por apenas <b>R$5,50/mês!</b> Futebol pra você e pra todo mundo!
     </div>
     <h2>Login Xfut</h2>
     <input type="text" id="username" placeholder="Usuário" autocomplete="username">
