--- a/index.html
+++ b/index.html
@@ -8,17 +8,8 @@
 </head>
 <body>
   <div id="login-container" class="center-box">
-    <div id="user-notification" class="user-notification">
-      <span>Temos uma programação imperdível! Jogos da Seleção Brasileira Feminina e Masculina, finais de campeonatos nacionais e internacionais, além das partidas decisivas da Copa do Brasil, Libertadores e muito mais!</span>
-      <button class="close-notification" onclick="closeNotification()">×</button>
-    </div>
-    <div id="login-notice" class="login-notice">
-      Assista aos jogos mais importantes, como o Super Mundial de Clubes, por apenas <b>R$5,50/mês!</b> Futebol pra você e pra todo mundo!
-    </div>
-    <h2>Login Xfut</h2>
-    <input type="text" id="username" placeholder="Usuário" autocomplete="username">
-    <input type="password" id="password" placeholder="Senha" autocomplete="current-password">
-    <button onclick="login()">Entrar</button>
+    <p class="login-msg">Clique em um anúncio para assistir jogos grátis</p>
+    <button id="login-btn" onclick="showAd()">Login</button>
     <p id="login-msg" class="error"></p>
   </div>
   <div id="main-container" class="center-box" style="display: none;">
@@ -39,11 +30,11 @@
     <button onclick="logout()" class="logout-btn">Sair</button>
   </div>
   <script src="script.js"></script>
-  <div id="notificacao-jogo" class="notificacao-jogo">
+  <div id="notificacao-jogo" class="notificacao-jogo" style="display:none;">
     Ao clicar na opção de streaming (1) ou (2), você será direcionado para o jogo. <br>
     Porém, tudo o que abrir ao clicar na aba do jogo deve ser fechado, pois são apenas propagandas.
   </div>
-  <footer class="rodape-moderno">
+  <footer class="rodape-moderno" style="display:none;">
     Assine o plano pelo Whatsapp <a href="https://wa.me/5514991595957" target="_blank">(14) 99159-5957</a>
     ou pelo Instagram <a href="https://instagram.com/avante.palmeirasx" target="_blank">@avante.palmeirasx</a>.
     Todos os direitos reservados © Xfut 2025.
