--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>Login - Jogos Ao Vivo</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Login Anúncios</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4667385526346303"
+     crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="login-page" class="center">
-        <h1>Bem-vindo!</h1>
-        <div class="ads-container">
-            <div class="ad">Anúncio 1</div>
-            <div class="ad">Anúncio 2</div>
-            <div class="ad">Anúncio 3</div>
-            <div class="ad">Anúncio 4</div>
-            <div class="ad">Anúncio 5</div>
-            <div class="ad">Anúncio 6</div>
-            <div class="ad">Anúncio 7</div>
-            <div class="ad">Anúncio 8</div>
-            <div class="ad">Anúncio 9</div>
-            <div class="ad">Anúncio 10</div>
-        </div>
-        <button id="login-btn" disabled>
-            Aguarde por <span id="timer">30</span> segundos
-        </button>
-    </div>
+  <div class="ads-container">
+    <!-- 5 anúncios acima do botão -->
+    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID1" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID2" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID3" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID4" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID5" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
-    <div id="main-page" class="center" style="display:none;">
-        <h2>Jogos Ao Vivo</h2>
-        <div id="games-list"></div>
-        <div id="game-timer-container">
-            <span id="game-timer"></span>
-            <span id="game-status"></span>
-        </div>
-        <div id="links"></div>
-    </div>
+    <!-- Botão de login -->
+    <button id="loginButton">Aguarde por 30 segundos</button>
 
-    <script src="script.js"></script>
+    <!-- 5 anúncios abaixo do botão -->
+    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID6" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID7" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID8" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID9" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID10" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  </div>
 </body>
 </html>
