--- a/index.html
+++ b/index.html
@@ -2,39 +2,53 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Login Anúncios</title>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4667385526346303"
-     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
+  <title>Página HTML de exemplo</title>
+  <!-- AdSense no HEAD (apenas uma vez!) -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4667385526346303"
+     crossorigin="anonymous"></script>  
+  <!-- Outros elementos do cabeçalho -->
 </head>
 <body>
-  <div class="ads-container">
-    <!-- 5 anúncios acima do botão -->
-    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID1" data-ad-format="auto"></ins>
-    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID2" data-ad-format="auto"></ins>
-    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID3" data-ad-format="auto"></ins>
-    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID4" data-ad-format="auto"></ins>
-    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID5" data-ad-format="auto"></ins>
+  <h1>Isto é o corpo da sua página.</h1>
+
+  <!-- EXEMPLO: 5 anúncios acima do botão -->
+  <div>
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4667385526346303" data-ad-slot="1234567890" data-ad-format="auto"></ins>
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
-    <!-- Botão de login -->
-    <button id="loginButton">Aguarde por 30 segundos</button>
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4667385526346303" data-ad-slot="1234567891" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
-    <!-- 5 anúncios abaixo do botão -->
-    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID6" data-ad-format="auto"></ins>
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4667385526346303" data-ad-slot="1234567892" data-ad-format="auto"></ins>
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID7" data-ad-format="auto"></ins>
+
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4667385526346303" data-ad-slot="1234567893" data-ad-format="auto"></ins>
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID8" data-ad-format="auto"></ins>
-    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID9" data-ad-format="auto"></ins>
-    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    <ins class="adsbygoogle" style="display:block; height:90px; margin:10px 0;" data-ad-client="ca-pub-4667385526346303" data-ad-slot="SEU_SLOT_ID10" data-ad-format="auto"></ins>
+
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4667385526346303" data-ad-slot="1234567894" data-ad-format="auto"></ins>
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   </div>
+
+  <!-- Botão de login -->
+  <button id="loginButton">Aguarde por 30 segundos</button>
+
+  <!-- EXEMPLO: 5 anúncios abaixo do botão -->
+  <div>
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4667385526346303" data-ad-slot="1234567895" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4667385526346303" data-ad-slot="1234567896" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4667385526346303" data-ad-slot="1234567897" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4667385526346303" data-ad-slot="1234567898" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4667385526346303" data-ad-slot="1234567899" data-ad-format="auto"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  </div>
+
 </body>
 </html>
