--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
     ou pelo Instagram <a href="https://instagram.com/avante.palmeirasx" target="_blank">@avante.palmeirasx</a>.
     Todos os direitos reservados © Xfut 2025.
   </footer>
+  <link rel="icon" type="image/jpeg" href="favicon.jpg">
 </body>
 </html>
