--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="login-container" class="center-box">
     <div id="user-notification" class="user-notification">
-      <span>Temos uma programação imperdível! Jogos da Seleção Brasileira Feminina e Masculina, finais de campeonatos nacionais e internacionais, além das partidas decisivas da Copa do Brasil, Libertadores e muito mais!</span>
+      <span>Estamos em Manutenção!!!</span> 
       <button class="close-notification" onclick="closeNotification()">×</button>
     </div>
     <div id="login-notice" class="login-notice">
