--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <ins class="adsbygoogle"
         style="display:inline-block;width:200px;height:700px"
         data-ad-client="ca-pub-4667385526346303"
-        data-ad-slot="2007934782"></ins>
+        data-ad-slot="2007934782"
+        data-adtest="on"></ins>
       <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
