--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
      crossorigin="anonymous"></script>
 <!-- Xfut -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block;background-color:rgb(200,200,200)"
      data-ad-client="ca-pub-4667385526346303"
      data-ad-slot="2007934782"
+     data-adtest="on"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
