--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <div id="login-container" class="center-box">
     <div id="user-notification" class="user-notification">
-      <span>Temos uma programação imperdível! Jogos da Seleção Brasileira Feminina e Masculina, finais de campeonatos nacionais e internacionais, além das partidas decisivas da Copa do Brasil, Libertadores e muito mais!</span>
+      <span>Assine o plano pelo Whatsapp <a href="https://wa.me/5514991595957" target="_blank">(14) 99159-5957</a>
+  ou pelo Instagram <a href="https://instagram.com/avante.palmeirasx" target="_blank">@avante.palmeirasx</a>.</span>
       <button class="close-notification" onclick="closeNotification()">×</button>
     </div>
     <div id="login-notice" class="login-notice">
